overflow issue solved

--- a/src/static/css/components/Offer/_offer.scss
+++ b/src/static/css/components/Offer/_offer.scss
@@ -48,8 +48,11 @@
             display: flex;
             flex-direction: column;
             width: 100%;
-            overflow-y: auto;
-            max-height: 650px;
+
+            @media (min-width: 768px) {
+                overflow-y: auto;
+                max-height: 650px;
+            }
 
             &::-webkit-scrollbar {
                 width: .5rem;
